# mcp-server-oci

./: .gitignore  Dockerfile  README.md  claude_config.json  claude_config.json.bkp  commands.file  pyproject.toml  requirement.txt
src/mcp_server_oci_resources/: __init__.py  server.py
